# pre-commit-dco

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
pre_commit_hooks/: check_dco.py
tests/: check_dco_test.py
