[metadata]
name = pre_commit_dco
version = 0.1.0
description = Zero-dependency pre-commit hook for DCO (Signed-off-by) verification.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ikalus1988/pre-commit-dco
author = Ikalus1988
author_email = 136884451+Ikalus1988@users.noreply.github.com
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    check-dco = pre_commit_hooks.check_dco:main

[bdist_wheel]
universal = True
